--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,4 @@ site_name: OpenLIMS
 repo_url: https://github.com/vzvenyach/limsrb
 site_description: Documentation for the OpenLIMS API
 site_author: V. David Zvenyach
-site_dir: ../public
+site_dir: public
